# postcard

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: client.rs  error.rs  errors.rs  lib.rs  secure_stream.rs  server.rs  utils.rs
src/codecs/: dns.rs  socks5.rs
src/parser/: dns.rs  socks5.rs
src/proto/: dns.rs  socks5.rs
