[package]
name = "postcard"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "pc-client"
path = "bin/client.rs"


[[bin]]
name = "pc-server"
path = "bin/server.rs"


[[bin]]
name = "key-gen"
path = "bin/key-gen.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
base64 = "0.13"
bytes = "1.0"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
hyper = { version="0.14", features = ["full"] }
h2 = "0.3"
nom = "7"
snowstorm = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
