[package]
name = "postcard"
version = "0.2.0"
edition = "2021"


[[bin]]
name = "pc-client"
path = "bin/client.rs"


[[bin]]
name = "pc-server"
path = "bin/server.rs"


[[bin]]
name = "key-gen"
path = "bin/key-gen.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.22"
bytes = "1.0"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1", "http2"] }
nom = "7"
snowstorm = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
